--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -12,13 +12,13 @@
             <ColumnDefinition Width="239*"/>
         </Grid.ColumnDefinitions>
         <Button x:Name="btnInput" Content="选择输入文件夹" HorizontalAlignment="Left" Margin="441.661,40,0,0" VerticalAlignment="Top" Width="100" Click="Input_Button_Click" Grid.Column="1"/>
-        <TextBlock x:Name="tbInput" HorizontalAlignment="Left" Margin="49,40,0,0" TextWrapping="Wrap" Text="请选择文件夹" VerticalAlignment="Top" Grid.Column="1" Height="50" Width="350" Grid.RowSpan="3" Grid.Row="3"/>
+        <TextBox x:Name="tbInput" HorizontalAlignment="Left" Margin="49,40,0,0" TextWrapping="Wrap" Text="请选择文件夹" VerticalAlignment="Top" Grid.Column="1" Height="50" Width="350" Grid.RowSpan="3" Grid.Row="3"/>
         <Button x:Name="btnChange" Content="开始转换" HorizontalAlignment="Left" Margin="442,158,0,0" VerticalAlignment="Top" Width="100" Click="Do_Action" Grid.Column="1"/>
-        <TextBlock x:Name="tbOutput" HorizontalAlignment="Left" Margin="49,98,0,0" TextWrapping="Wrap" Text="请选择文件夹" VerticalAlignment="Top" Grid.Column="1" Height="50" Width="350" Grid.Row="3" Grid.RowSpan="3"/>
+        <TextBox x:Name="tbOutput" HorizontalAlignment="Left" Margin="49,98,0,0" TextWrapping="Wrap" Text="请选择文件夹" VerticalAlignment="Top" Grid.Column="1" Height="50" Width="350" Grid.Row="3" Grid.RowSpan="3"/>
         <TextBlock HorizontalAlignment="Left" Margin="29,40,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Grid.ColumnSpan="2"><Run Text="源"/><Run Text="DAT"/><Run Text="文件夹"/></TextBlock>
         <TextBlock HorizontalAlignment="Left" Margin="29,98,0,0" TextWrapping="Wrap" Text="输出文件夹" VerticalAlignment="Top" Grid.ColumnSpan="2"/>
         <Button x:Name="btnOutput" Content="选择输出文件夹" HorizontalAlignment="Left" Margin="441.661,99,0,0" VerticalAlignment="Top" Width="100" Grid.Column="1" Click="Output_Button_Click"/>
-        <TextBlock x:Name="showText" HorizontalAlignment="Left" Margin="29,223,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Grid.ColumnSpan="2" Width="600" Height="150"><Run Text="程序初始提供三种文件的识别，分别为FFD8-jpg，"/><Run Text="8950-png，"/><Run Text="4749-gif。"/><LineBreak/><Run Text="这通常覆盖了日常使用所需，可以点击添加映射手动增加支持的文件，仅在本次使用过程中生效。"/><LineBreak/><Run Text="该程序仅处理dat后缀文件，大小写不敏感。"/></TextBlock>
+        <TextBlock x:Name="showText" HorizontalAlignment="Left" Margin="29,223,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Grid.ColumnSpan="2" Width="600" Height="150"><Run Text="程序初始提供三种文件的识别，分别为FFD8-jpg，"/><Run Text="8950-png，"/><Run Text="4749-gif。"/><LineBreak/><Run Text="这通常覆盖了日常使用所需，可以点击添加映射手动增加支持的文件，仅在本次使用过程中生效。"/><LineBreak/><Run Text="该程序仅处理dat后缀文件，大小写不敏感。"/><LineBreak/><Run/><LineBreak/><Run Text="很多同学提出在点击选择文件夹时闪退，于是我把文件夹弄成了输入框"/><LineBreak/><Run Text="这样即使不点击按钮也可以通过复制路径执行程序。"/><LineBreak/><Run Text="格式例：C:\Users\Administrator\Documents\WeChat Files\wxid_8tff1jiwovod22\FileStorage\Image\2020-09"/></TextBlock>
         <Button Content="增加映射" HorizontalAlignment="Left" Margin="29,163,0,0" VerticalAlignment="Top" Width="75" Grid.ColumnSpan="2" Click="AddConfigBtn"/>
 
     </Grid>
